# Super-Slime-Bros

./: CMakeLists.txt  README.md
include/: game.h
include/Core/: log.h  window.h
include/Graphics/: sprite.h
include/System/: game.h  input.h  player.h  state.h
src/: game.c  main.c
src/Core/: CMakeLists.txt  log.c  window.c
src/Graphics/: CMakeLists.txt  sprite.c
src/System/: CMakeLists.txt  game.c  input.c  player.c  state.c
